编译原理实验/实验10/py_parse1/py_parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> segment
Rule 1     segment -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> if
Rule 8     statement -> else
Rule 9     statement -> elif
Rule 10    statement -> while
Rule 11    statement -> break
Rule 12    statement -> for
Rule 13    break -> BREAK
Rule 14    while -> WHILE ( condition ) { statements }
Rule 15    for -> FOR ( assignment ; condition ; VARIABLE + + ) { statements }
Rule 16    if -> IF ( condition ) { statements }
Rule 17    else -> ELSE { statements }
Rule 18    elif -> ELIF ( condition ) { statements }
Rule 19    condition -> greater
Rule 20    condition -> greater_equal
Rule 21    condition -> less
Rule 22    condition -> less_equal
Rule 23    condition -> equal_equal
Rule 24    greater -> term > term
Rule 25    greater_equal -> term > = term
Rule 26    less -> term < term
Rule 27    less_equal -> term < = term
Rule 28    equal_equal -> term = = term
Rule 29    assignment -> VARIABLE = term
Rule 30    assignment -> VARIABLE = array
Rule 31    assignment -> array_term = term
Rule 32    operation -> ADD
Rule 33    operation -> SUB
Rule 34    operation -> MUL
Rule 35    operation -> DIV
Rule 36    operation -> DIV_ext
Rule 37    operation -> ( operation )
Rule 38    ADD -> term + term
Rule 39    SUB -> term - term
Rule 40    MUL -> term * term
Rule 41    DIV -> term / term
Rule 42    DIV_ext -> term / / term
Rule 43    print -> PRINT ( pcontent )
Rule 44    array_term -> VARIABLE [ term ]
Rule 45    array -> [ pcontent ]
Rule 46    pcontent -> pcontent , term
Rule 47    pcontent -> term
Rule 48    term -> VARIABLE
Rule 49    term -> NUMBER
Rule 50    term -> operation
Rule 51    term -> array_term
Rule 52    term -> len
Rule 53    len -> LEN ( VARIABLE )

Terminals, with rules where they appear

(                    : 14 15 16 18 37 43 53
)                    : 14 15 16 18 37 43 53
*                    : 40
+                    : 15 15 38
,                    : 46
-                    : 39
/                    : 41 42 42
;                    : 15 15
<                    : 26 27
=                    : 25 27 28 28 29 30 31
>                    : 24 25
BREAK                : 13
ELIF                 : 18
ELSE                 : 17
FOR                  : 15
IF                   : 16
LEN                  : 53
NUMBER               : 49
PRINT                : 43
VARIABLE             : 15 29 30 44 48 53
WHILE                : 14
[                    : 44 45
]                    : 44 45
error                : 
{                    : 14 15 16 17 18
}                    : 14 15 16 17 18

Nonterminals, with rules where they appear

ADD                  : 32
DIV                  : 35
DIV_ext              : 36
MUL                  : 34
SUB                  : 33
array                : 30
array_term           : 31 51
assignment           : 4 15
break                : 11
condition            : 14 15 16 18
elif                 : 9
else                 : 8
equal_equal          : 23
for                  : 12
greater              : 19
greater_equal        : 20
if                   : 7
len                  : 52
less                 : 21
less_equal           : 22
operation            : 5 37 50
pcontent             : 43 45 46
print                : 6
segment              : 0
statement            : 2 3
statements           : 1 2 14 15 16 17 18
term                 : 24 24 25 25 26 26 27 27 28 28 29 31 38 38 39 39 40 40 41 41 42 42 44 46 47
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . segment
    (1) segment -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (29) assignment -> . VARIABLE = term
    (30) assignment -> . VARIABLE = array
    (31) assignment -> . array_term = term
    (32) operation -> . ADD
    (33) operation -> . SUB
    (34) operation -> . MUL
    (35) operation -> . DIV
    (36) operation -> . DIV_ext
    (37) operation -> . ( operation )
    (43) print -> . PRINT ( pcontent )
    (16) if -> . IF ( condition ) { statements }
    (17) else -> . ELSE { statements }
    (18) elif -> . ELIF ( condition ) { statements }
    (14) while -> . WHILE ( condition ) { statements }
    (13) break -> . BREAK
    (15) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (44) array_term -> . VARIABLE [ term ]
    (38) ADD -> . term + term
    (39) SUB -> . term - term
    (40) MUL -> . term * term
    (41) DIV -> . term / term
    (42) DIV_ext -> . term / / term
    (48) term -> . VARIABLE
    (49) term -> . NUMBER
    (50) term -> . operation
    (51) term -> . array_term
    (52) term -> . len
    (53) len -> . LEN ( VARIABLE )

    VARIABLE        shift and go to state 13
    (               shift and go to state 21
    PRINT           shift and go to state 22
    IF              shift and go to state 23
    ELSE            shift and go to state 24
    ELIF            shift and go to state 25
    WHILE           shift and go to state 26
    BREAK           shift and go to state 27
    FOR             shift and go to state 28
    NUMBER          shift and go to state 29
    LEN             shift and go to state 31

    segment                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    else                           shift and go to state 8
    elif                           shift and go to state 9
    while                          shift and go to state 10
    break                          shift and go to state 11
    for                            shift and go to state 12
    term                           shift and go to state 14
    array_term                     shift and go to state 15
    ADD                            shift and go to state 16
    SUB                            shift and go to state 17
    MUL                            shift and go to state 18
    DIV                            shift and go to state 19
    DIV_ext                        shift and go to state 20
    len                            shift and go to state 30

state 1

    (0) S' -> segment .



state 2

    (1) segment -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (29) assignment -> . VARIABLE = term
    (30) assignment -> . VARIABLE = array
    (31) assignment -> . array_term = term
    (32) operation -> . ADD
    (33) operation -> . SUB
    (34) operation -> . MUL
    (35) operation -> . DIV
    (36) operation -> . DIV_ext
    (37) operation -> . ( operation )
    (43) print -> . PRINT ( pcontent )
    (16) if -> . IF ( condition ) { statements }
    (17) else -> . ELSE { statements }
    (18) elif -> . ELIF ( condition ) { statements }
    (14) while -> . WHILE ( condition ) { statements }
    (13) break -> . BREAK
    (15) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (44) array_term -> . VARIABLE [ term ]
    (38) ADD -> . term + term
    (39) SUB -> . term - term
    (40) MUL -> . term * term
    (41) DIV -> . term / term
    (42) DIV_ext -> . term / / term
    (48) term -> . VARIABLE
    (49) term -> . NUMBER
    (50) term -> . operation
    (51) term -> . array_term
    (52) term -> . len
    (53) len -> . LEN ( VARIABLE )

    $end            reduce using rule 1 (segment -> statements .)
    VARIABLE        shift and go to state 13
    (               shift and go to state 21
    PRINT           shift and go to state 22
    IF              shift and go to state 23
    ELSE            shift and go to state 24
    ELIF            shift and go to state 25
    WHILE           shift and go to state 26
    BREAK           shift and go to state 27
    FOR             shift and go to state 28
    NUMBER          shift and go to state 29
    LEN             shift and go to state 31

    statement                      shift and go to state 32
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    else                           shift and go to state 8
    elif                           shift and go to state 9
    while                          shift and go to state 10
    break                          shift and go to state 11
    for                            shift and go to state 12
    term                           shift and go to state 14
    array_term                     shift and go to state 15
    ADD                            shift and go to state 16
    SUB                            shift and go to state 17
    MUL                            shift and go to state 18
    DIV                            shift and go to state 19
    DIV_ext                        shift and go to state 20
    len                            shift and go to state 30

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    (               reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    ELIF            reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    LEN             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    (               reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ELIF            reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LEN             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .
    (50) term -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    (               reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    ELSE            reduce using rule 5 (statement -> operation .)
    ELIF            reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    NUMBER          reduce using rule 5 (statement -> operation .)
    LEN             reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)
    +               reduce using rule 50 (term -> operation .)
    -               reduce using rule 50 (term -> operation .)
    *               reduce using rule 50 (term -> operation .)
    /               reduce using rule 50 (term -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    (               reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    ELSE            reduce using rule 6 (statement -> print .)
    ELIF            reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    NUMBER          reduce using rule 6 (statement -> print .)
    LEN             reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> if .

    VARIABLE        reduce using rule 7 (statement -> if .)
    (               reduce using rule 7 (statement -> if .)
    PRINT           reduce using rule 7 (statement -> if .)
    IF              reduce using rule 7 (statement -> if .)
    ELSE            reduce using rule 7 (statement -> if .)
    ELIF            reduce using rule 7 (statement -> if .)
    WHILE           reduce using rule 7 (statement -> if .)
    BREAK           reduce using rule 7 (statement -> if .)
    FOR             reduce using rule 7 (statement -> if .)
    NUMBER          reduce using rule 7 (statement -> if .)
    LEN             reduce using rule 7 (statement -> if .)
    $end            reduce using rule 7 (statement -> if .)
    }               reduce using rule 7 (statement -> if .)


state 8

    (8) statement -> else .

    VARIABLE        reduce using rule 8 (statement -> else .)
    (               reduce using rule 8 (statement -> else .)
    PRINT           reduce using rule 8 (statement -> else .)
    IF              reduce using rule 8 (statement -> else .)
    ELSE            reduce using rule 8 (statement -> else .)
    ELIF            reduce using rule 8 (statement -> else .)
    WHILE           reduce using rule 8 (statement -> else .)
    BREAK           reduce using rule 8 (statement -> else .)
    FOR             reduce using rule 8 (statement -> else .)
    NUMBER          reduce using rule 8 (statement -> else .)
    LEN             reduce using rule 8 (statement -> else .)
    $end            reduce using rule 8 (statement -> else .)
    }               reduce using rule 8 (statement -> else .)


state 9

    (9) statement -> elif .

    VARIABLE        reduce using rule 9 (statement -> elif .)
    (               reduce using rule 9 (statement -> elif .)
    PRINT           reduce using rule 9 (statement -> elif .)
    IF              reduce using rule 9 (statement -> elif .)
    ELSE            reduce using rule 9 (statement -> elif .)
    ELIF            reduce using rule 9 (statement -> elif .)
    WHILE           reduce using rule 9 (statement -> elif .)
    BREAK           reduce using rule 9 (statement -> elif .)
    FOR             reduce using rule 9 (statement -> elif .)
    NUMBER          reduce using rule 9 (statement -> elif .)
    LEN             reduce using rule 9 (statement -> elif .)
    $end            reduce using rule 9 (statement -> elif .)
    }               reduce using rule 9 (statement -> elif .)


state 10

    (10) statement -> while .

    VARIABLE        reduce using rule 10 (statement -> while .)
    (               reduce using rule 10 (statement -> while .)
    PRINT           reduce using rule 10 (statement -> while .)
    IF              reduce using rule 10 (statement -> while .)
    ELSE            reduce using rule 10 (statement -> while .)
    ELIF            reduce using rule 10 (statement -> while .)
    WHILE           reduce using rule 10 (statement -> while .)
    BREAK           reduce using rule 10 (statement -> while .)
    FOR             reduce using rule 10 (statement -> while .)
    NUMBER          reduce using rule 10 (statement -> while .)
    LEN             reduce using rule 10 (statement -> while .)
    $end            reduce using rule 10 (statement -> while .)
    }               reduce using rule 10 (statement -> while .)


state 11

    (11) statement -> break .

    VARIABLE        reduce using rule 11 (statement -> break .)
    (               reduce using rule 11 (statement -> break .)
    PRINT           reduce using rule 11 (statement -> break .)
    IF              reduce using rule 11 (statement -> break .)
    ELSE            reduce using rule 11 (statement -> break .)
    ELIF            reduce using rule 11 (statement -> break .)
    WHILE           reduce using rule 11 (statement -> break .)
    BREAK           reduce using rule 11 (statement -> break .)
    FOR             reduce using rule 11 (statement -> break .)
    NUMBER          reduce using rule 11 (statement -> break .)
    LEN             reduce using rule 11 (statement -> break .)
    $end            reduce using rule 11 (statement -> break .)
    }               reduce using rule 11 (statement -> break .)


state 12

    (12) statement -> for .

    VARIABLE        reduce using rule 12 (statement -> for .)
    (               reduce using rule 12 (statement -> for .)
    PRINT           reduce using rule 12 (statement -> for .)
    IF              reduce using rule 12 (statement -> for .)
    ELSE            reduce using rule 12 (statement -> for .)
    ELIF            reduce using rule 12 (statement -> for .)
    WHILE           reduce using rule 12 (statement -> for .)
    BREAK           reduce using rule 12 (statement -> for .)
    FOR             reduce using rule 12 (statement -> for .)
    NUMBER          reduce using rule 12 (statement -> for .)
    LEN             reduce using rule 12 (statement -> for .)
    $end            reduce using rule 12 (statement -> for .)
    }               reduce using rule 12 (statement -> for .)


state 13

    (29) assignment -> VARIABLE . = term
    (30) assignment -> VARIABLE . = array
    (44) array_term -> VARIABLE . [ term ]
    (48) term -> VARIABLE .

    =               shift and go to state 33
    [               shift and go to state 34
    +               reduce using rule 48 (term -> VARIABLE .)
    -               reduce using rule 48 (term -> VARIABLE .)
    *               reduce using rule 48 (term -> VARIABLE .)
    /               reduce using rule 48 (term -> VARIABLE .)


state 14

    (38) ADD -> term . + term
    (39) SUB -> term . - term
    (40) MUL -> term . * term
    (41) DIV -> term . / term
    (42) DIV_ext -> term . / / term

    +               shift and go to state 35
    -               shift and go to state 36
    *               shift and go to state 37
    /               shift and go to state 38


state 15

    (31) assignment -> array_term . = term
    (51) term -> array_term .

    =               shift and go to state 39
    +               reduce using rule 51 (term -> array_term .)
    -               reduce using rule 51 (term -> array_term .)
    *               reduce using rule 51 (term -> array_term .)
    /               reduce using rule 51 (term -> array_term .)


state 16

    (32) operation -> ADD .

    VARIABLE        reduce using rule 32 (operation -> ADD .)
    (               reduce using rule 32 (operation -> ADD .)
    PRINT           reduce using rule 32 (operation -> ADD .)
    IF              reduce using rule 32 (operation -> ADD .)
    ELSE            reduce using rule 32 (operation -> ADD .)
    ELIF            reduce using rule 32 (operation -> ADD .)
    WHILE           reduce using rule 32 (operation -> ADD .)
    BREAK           reduce using rule 32 (operation -> ADD .)
    FOR             reduce using rule 32 (operation -> ADD .)
    NUMBER          reduce using rule 32 (operation -> ADD .)
    LEN             reduce using rule 32 (operation -> ADD .)
    $end            reduce using rule 32 (operation -> ADD .)
    +               reduce using rule 32 (operation -> ADD .)
    -               reduce using rule 32 (operation -> ADD .)
    *               reduce using rule 32 (operation -> ADD .)
    /               reduce using rule 32 (operation -> ADD .)
    )               reduce using rule 32 (operation -> ADD .)
    }               reduce using rule 32 (operation -> ADD .)
    ;               reduce using rule 32 (operation -> ADD .)
    ]               reduce using rule 32 (operation -> ADD .)
    ,               reduce using rule 32 (operation -> ADD .)
    >               reduce using rule 32 (operation -> ADD .)
    <               reduce using rule 32 (operation -> ADD .)
    =               reduce using rule 32 (operation -> ADD .)


state 17

    (33) operation -> SUB .

    VARIABLE        reduce using rule 33 (operation -> SUB .)
    (               reduce using rule 33 (operation -> SUB .)
    PRINT           reduce using rule 33 (operation -> SUB .)
    IF              reduce using rule 33 (operation -> SUB .)
    ELSE            reduce using rule 33 (operation -> SUB .)
    ELIF            reduce using rule 33 (operation -> SUB .)
    WHILE           reduce using rule 33 (operation -> SUB .)
    BREAK           reduce using rule 33 (operation -> SUB .)
    FOR             reduce using rule 33 (operation -> SUB .)
    NUMBER          reduce using rule 33 (operation -> SUB .)
    LEN             reduce using rule 33 (operation -> SUB .)
    $end            reduce using rule 33 (operation -> SUB .)
    +               reduce using rule 33 (operation -> SUB .)
    -               reduce using rule 33 (operation -> SUB .)
    *               reduce using rule 33 (operation -> SUB .)
    /               reduce using rule 33 (operation -> SUB .)
    )               reduce using rule 33 (operation -> SUB .)
    }               reduce using rule 33 (operation -> SUB .)
    ;               reduce using rule 33 (operation -> SUB .)
    ]               reduce using rule 33 (operation -> SUB .)
    ,               reduce using rule 33 (operation -> SUB .)
    >               reduce using rule 33 (operation -> SUB .)
    <               reduce using rule 33 (operation -> SUB .)
    =               reduce using rule 33 (operation -> SUB .)


state 18

    (34) operation -> MUL .

    VARIABLE        reduce using rule 34 (operation -> MUL .)
    (               reduce using rule 34 (operation -> MUL .)
    PRINT           reduce using rule 34 (operation -> MUL .)
    IF              reduce using rule 34 (operation -> MUL .)
    ELSE            reduce using rule 34 (operation -> MUL .)
    ELIF            reduce using rule 34 (operation -> MUL .)
    WHILE           reduce using rule 34 (operation -> MUL .)
    BREAK           reduce using rule 34 (operation -> MUL .)
    FOR             reduce using rule 34 (operation -> MUL .)
    NUMBER          reduce using rule 34 (operation -> MUL .)
    LEN             reduce using rule 34 (operation -> MUL .)
    $end            reduce using rule 34 (operation -> MUL .)
    +               reduce using rule 34 (operation -> MUL .)
    -               reduce using rule 34 (operation -> MUL .)
    *               reduce using rule 34 (operation -> MUL .)
    /               reduce using rule 34 (operation -> MUL .)
    )               reduce using rule 34 (operation -> MUL .)
    }               reduce using rule 34 (operation -> MUL .)
    ;               reduce using rule 34 (operation -> MUL .)
    ]               reduce using rule 34 (operation -> MUL .)
    ,               reduce using rule 34 (operation -> MUL .)
    >               reduce using rule 34 (operation -> MUL .)
    <               reduce using rule 34 (operation -> MUL .)
    =               reduce using rule 34 (operation -> MUL .)


state 19

    (35) operation -> DIV .

    VARIABLE        reduce using rule 35 (operation -> DIV .)
    (               reduce using rule 35 (operation -> DIV .)
    PRINT           reduce using rule 35 (operation -> DIV .)
    IF              reduce using rule 35 (operation -> DIV .)
    ELSE            reduce using rule 35 (operation -> DIV .)
    ELIF            reduce using rule 35 (operation -> DIV .)
    WHILE           reduce using rule 35 (operation -> DIV .)
    BREAK           reduce using rule 35 (operation -> DIV .)
    FOR             reduce using rule 35 (operation -> DIV .)
    NUMBER          reduce using rule 35 (operation -> DIV .)
    LEN             reduce using rule 35 (operation -> DIV .)
    $end            reduce using rule 35 (operation -> DIV .)
    +               reduce using rule 35 (operation -> DIV .)
    -               reduce using rule 35 (operation -> DIV .)
    *               reduce using rule 35 (operation -> DIV .)
    /               reduce using rule 35 (operation -> DIV .)
    )               reduce using rule 35 (operation -> DIV .)
    }               reduce using rule 35 (operation -> DIV .)
    ;               reduce using rule 35 (operation -> DIV .)
    ]               reduce using rule 35 (operation -> DIV .)
    ,               reduce using rule 35 (operation -> DIV .)
    >               reduce using rule 35 (operation -> DIV .)
    <               reduce using rule 35 (operation -> DIV .)
    =               reduce using rule 35 (operation -> DIV .)


state 20

    (36) operation -> DIV_ext .

    VARIABLE        reduce using rule 36 (operation -> DIV_ext .)
    (               reduce using rule 36 (operation -> DIV_ext .)
    PRINT           reduce using rule 36 (operation -> DIV_ext .)
    IF              reduce using rule 36 (operation -> DIV_ext .)
    ELSE            reduce using rule 36 (operation -> DIV_ext .)
    ELIF            reduce using rule 36 (operation -> DIV_ext .)
    WHILE           reduce using rule 36 (operation -> DIV_ext .)
    BREAK           reduce using rule 36 (operation -> DIV_ext .)
    FOR             reduce using rule 36 (operation -> DIV_ext .)
    NUMBER          reduce using rule 36 (operation -> DIV_ext .)
    LEN             reduce using rule 36 (operation -> DIV_ext .)
    $end            reduce using rule 36 (operation -> DIV_ext .)
    +               reduce using rule 36 (operation -> DIV_ext .)
    -               reduce using rule 36 (operation -> DIV_ext .)
    *               reduce using rule 36 (operation -> DIV_ext .)
    /               reduce using rule 36 (operation -> DIV_ext .)
    )               reduce using rule 36 (operation -> DIV_ext .)
    }               reduce using rule 36 (operation -> DIV_ext .)
    ;               reduce using rule 36 (operation -> DIV_ext .)
    ]               reduce using rule 36 (operation -> DIV_ext .)
    ,               reduce using rule 36 (operation -> DIV_ext .)
    >               reduce using rule 36 (operation -> DIV_ext .)
    <               reduce using rule 36 (operation -> DIV_ext .)
    =               reduce using rule 36 (operation -> DIV_ext .)


state 21

    (37) operation -> ( . operation )
    (32) operation -> . ADD
    (33) operation -> . SUB
    (34) operation -> . MUL
    (35) operation -> . DIV
    (36) operation -> . DIV_ext
    (37) operation -> . ( operation )
    (38) ADD -> . term + term
    (39) SUB -> . term - term
    (40) MUL -> . term * term
    (41) DIV -> . term / term
    (42) DIV_ext -> . term / / term
    (48) term -> . VARIABLE
    (49) term -> . NUMBER
    (50) term -> . operation
    (51) term -> . array_term
    (52) term -> . len
    (44) array_term -> . VARIABLE [ term ]
    (53) len -> . LEN ( VARIABLE )

    (               shift and go to state 21
    VARIABLE        shift and go to state 41
    NUMBER          shift and go to state 29
    LEN             shift and go to state 31

    operation                      shift and go to state 40
    ADD                            shift and go to state 16
    SUB                            shift and go to state 17
    MUL                            shift and go to state 18
    DIV                            shift and go to state 19
    DIV_ext                        shift and go to state 20
    term                           shift and go to state 14
    array_term                     shift and go to state 42
    len                            shift and go to state 30

state 22

    (43) print -> PRINT . ( pcontent )

    (               shift and go to state 43


state 23

    (16) if -> IF . ( condition ) { statements }

    (               shift and go to state 44


state 24

    (17) else -> ELSE . { statements }

    {               shift and go to state 45


state 25

    (18) elif -> ELIF . ( condition ) { statements }

    (               shift and go to state 46


state 26

    (14) while -> WHILE . ( condition ) { statements }

    (               shift and go to state 47


state 27

    (13) break -> BREAK .

    VARIABLE        reduce using rule 13 (break -> BREAK .)
    (               reduce using rule 13 (break -> BREAK .)
    PRINT           reduce using rule 13 (break -> BREAK .)
    IF              reduce using rule 13 (break -> BREAK .)
    ELSE            reduce using rule 13 (break -> BREAK .)
    ELIF            reduce using rule 13 (break -> BREAK .)
    WHILE           reduce using rule 13 (break -> BREAK .)
    BREAK           reduce using rule 13 (break -> BREAK .)
    FOR             reduce using rule 13 (break -> BREAK .)
    NUMBER          reduce using rule 13 (break -> BREAK .)
    LEN             reduce using rule 13 (break -> BREAK .)
    $end            reduce using rule 13 (break -> BREAK .)
    }               reduce using rule 13 (break -> BREAK .)


state 28

    (15) for -> FOR . ( assignment ; condition ; VARIABLE + + ) { statements }

    (               shift and go to state 48


state 29

    (49) term -> NUMBER .

    +               reduce using rule 49 (term -> NUMBER .)
    -               reduce using rule 49 (term -> NUMBER .)
    *               reduce using rule 49 (term -> NUMBER .)
    /               reduce using rule 49 (term -> NUMBER .)
    VARIABLE        reduce using rule 49 (term -> NUMBER .)
    (               reduce using rule 49 (term -> NUMBER .)
    PRINT           reduce using rule 49 (term -> NUMBER .)
    IF              reduce using rule 49 (term -> NUMBER .)
    ELSE            reduce using rule 49 (term -> NUMBER .)
    ELIF            reduce using rule 49 (term -> NUMBER .)
    WHILE           reduce using rule 49 (term -> NUMBER .)
    BREAK           reduce using rule 49 (term -> NUMBER .)
    FOR             reduce using rule 49 (term -> NUMBER .)
    NUMBER          reduce using rule 49 (term -> NUMBER .)
    LEN             reduce using rule 49 (term -> NUMBER .)
    $end            reduce using rule 49 (term -> NUMBER .)
    }               reduce using rule 49 (term -> NUMBER .)
    ;               reduce using rule 49 (term -> NUMBER .)
    ]               reduce using rule 49 (term -> NUMBER .)
    )               reduce using rule 49 (term -> NUMBER .)
    ,               reduce using rule 49 (term -> NUMBER .)
    >               reduce using rule 49 (term -> NUMBER .)
    <               reduce using rule 49 (term -> NUMBER .)
    =               reduce using rule 49 (term -> NUMBER .)


state 30

    (52) term -> len .
